# Hybrid-digital-signatures

./: .gitignore  CMakeLists.txt  README.md  manifest.txt
include/: config.h  dilithium_sig.h  ecdsa_sig.h  falcon_sig.h  hash.h  hybrid_sig.h  hybrid_signature.h  image_buffer.h  image_uploader.h  rsa_pss_sig.h  scheme.h  sphincs_sig.h
src/: benchmark.c  extract_image.c  file_tamper.c  hash.c  hybrid_sig.c  hybrid_signature.c  image_buffer.c  image_uploader.c  main.c  server.c  verify.c
src/pq-signatures/: dilithium_sig.c  falcon_sig.c  sphincs_sig.c
src/signatures/: ecdsa_sig.c  rsa_pss_sig.c
